# Clipwise

./: pyproject.toml
api/: logger.py  main.py  pipeline.py
modules/analysis/: scorer.py
modules/audio/: transcriber.py
modules/video/: processor.py
