[project]
name = "projeto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.45.0",
]
